2013-06-10  Roy Hashimoto <roy.hashimoto@gmail.com>  (tiny change)

	* mm-view.el (mm-pkcs7-signed-magic): Allow newline in the regexp and
	make it easier to read.
	(mm-pkcs7-enveloped-magic): Ditto.

2013-06-06  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-ems.el (gnus-image-type-available-p): Test `display-images-p'
	before `image-type-available-p' to avoid loading the image libraries
	needlessly.

2013-06-05  David Engster  <deng@randomsample.de>

	* gnus-sum.el (gnus-update-marks): Do not remove empty 'unexist'
	ranges, since `nnimap-retrieve-group-data-early' also uses it as a flag
	to see whether the group was synced before.

2013-06-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* tls.el (open-tls-stream): Remove unneeded buffer contents up to point
	when opening the connection.
	Suggested by João Távora <joaotavora@gmail.com> in
	<http://lists.gnu.org/archive/html/emacs-devel/2013-05/msg00464.html>.

2013-06-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-date-ut, article-update-date-lapsed): Don't
	assume Date header begins with "Date", that may be customized into
	something like "X-Sent" using gnus-article-time-format.
	(article-transform-date): Allow multi-line Date header.

2013-06-02  David Engster  <deng@randomsample.de>

	* registry.el (initialize-instance, registry-lookup)
	(registry-lookup-breaks-before-lexbind, registry-lookup-secondary)
	(registry-lookup-secondary-value, registry-search, registry-delete)
	(registry-insert, registry-reindex, registry-size, registry-prune): Do
	not wrap methods in `eval-and-compile'.  This breaks due to latest
	changes in EIEIO (introduction of eieio-core.el).

2013-05-30  Glenn Morris  <rgm@gnu.org>

	* nnmail.el (nnmail-fancy-expiry-target):
	Also bind mail-dont-reply-to-names.

	* spam-stat.el (spam-stat-save):
	No need to tweak font-lock in temp buffers.

	* shr.el (shr-put-image): Silence compiler.

2013-05-29  Glenn Morris  <rgm@gnu.org>
