@@ -1,3 +1,12 @@
+2013-06-10  Albert Krewinkel  <krewinkel@moltkeplatz.de>
+
+	* sieve.el: Put point at beginning of buffer when viewing a script.
+	(sieve-open-server): respect the PORT parameter. Show the correct port
+	number in sieve-buffer's header. Fixed code to also work with a string
+	as port specifier. Properly close the connection on pressing 'q'. Make
+	sieve-manage-quit close the connection and process buffer. Also, remove
+	duplicate keybinding for 'q'.
+
 2013-06-10  Roy Hashimoto <roy.hashimoto@gmail.com>  (tiny change)
 
 	* mm-view.el (mm-pkcs7-signed-magic): Allow newline in the regexp and
